# exercise8

./: .clang-format  .clangd  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.ipynb  task1.main.c  task2.c  task2.h  task2.test.c  task3.c  task3.h  task3.test.c
.iue/: .expected-files
.iue/.vscode-iuelab/: launch.json  settings.json
.iue/.vscode-jhub/: launch.json  settings.json
